[package]
name = "transfer-hook-counter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook_counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
proc-macro-crate = "< 3.0"
solana-program = ">=1.17, < 1.18"
anchor-lang = { version = "0.29", features = ["init-if-needed"] }
anchor-spl = "0.29"
spl-tlv-account-resolution = "0.5.2"
spl-transfer-hook-interface = "0.5.1"

# https://github.com/solana-labs/solana/issues/34609
ahash = "=0.8.5"
